--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         </div>	
 <br>
                         <div class="s-intro__more">
-                            <a class="smoothscroll btn btn--stroke s-intro__more-btn" href="#about">
+                            <a class="smoothscroll btn btn--stroke s-intro__more-btn" href="#contact">
                                 Contactar
                             </a>
                         </div>
@@ -309,10 +309,10 @@
                 <div class="row section-header section-header--dark">
                     <div class="column lg-12">
                         
-                        <h3 class="text-pretitle">Get In Touch</h3>
+                        <h3 class="text-pretitle">Contacto</h3>
                         <h1 class="text-display-title">
                             Quieres tener ti primera ayda Informática a domicilio completamente GRATUITA? 
-                            Contactame en el siguiente número. <a href="mailto:#0">hello@infinity.com</a>.
+                            Contactame en el siguiente número. <a href="https://wa.me/message/JLR6MHMMTAZTJ1">WhatsApp</a>.
                         </h1>
                         
                     </div> <!-- end column -->
